refactor: split support into servlet and mvc (backport c4deca5, javax适配)