@@ -1,10 +1,11 @@
-package io.springperf.webtest.jsp;
+﻿package io.springperf.webtest.jsp;
 
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 
 import java.util.HashMap;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -27,14 +28,14 @@ public class JspViewController {
         Map<String, String> map = new HashMap<>();
         map.put("name", "map-value");
         model.addAttribute("map", map);
-        model.addAttribute("list", List.of("alpha", "beta"));
+        model.addAttribute("list", Arrays.asList("alpha", "beta"));
         model.addAttribute("user", new UserDto("zhangsan"));
         return "jsp:model";
     }
 
     @GetMapping("/jsp-jstl")
     public String jspJstl(Model model) {
-        model.addAttribute("items", List.of("a", "b", "c"));
+        model.addAttribute("items", Arrays.asList("a", "b", "c"));
         model.addAttribute("flag", true);
         return "jsp:jstl";
     }
