@@ -1,4 +1,4 @@
-package io.springperf.webtest;
+﻿package io.springperf.webtest;
 
 import com.alibaba.fastjson2.JSON;
 import okhttp3.MediaType;
@@ -8,13 +8,14 @@ import okhttp3.Response;
 import org.junit.jupiter.api.Test;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * E2E 边界场景：HTTP 方法完整性、状态码、中文编码、多值参数、404/405 区分、条件请求 304、Keep-Alive。
+ * E2E 杈圭晫鍦烘櫙锛欻TTP 鏂规硶瀹屾暣鎬с€佺姸鎬佺爜銆佷腑鏂囩紪鐮併€佸鍊煎弬鏁般€?04/405 鍖哄垎銆佹潯浠惰姹?304銆並eep-Alive銆?
  */
 public class EdgeCaseE2ETest extends BaseE2ETest {
 
@@ -24,7 +25,7 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
         return url("/api/edge");
     }
 
-    // ==================== HTTP 方法完整性 ====================
+    // ==================== HTTP 鏂规硶瀹屾暣鎬?====================
 
     @Test
     void getMethod_returns200() throws Exception {
@@ -84,7 +85,7 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
         try (Response resp = CLIENT.newCall(req).execute()) {
             assertEquals(200, resp.code());
             String body = resp.body() != null ? resp.body().string() : null;
-            assertTrue(body == null || body.isEmpty(), "HEAD 响应不应包含 body，实际: " + body);
+            assertTrue(body == null || body.isEmpty(), "HEAD 鍝嶅簲涓嶅簲鍖呭惈 body锛屽疄闄? " + body);
         }
     }
 
@@ -105,14 +106,14 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
         }
     }
 
-    // ==================== 405 方法不匹配 ====================
+    // ==================== 405 鏂规硶涓嶅尮閰?====================
 
     @Test
     void onlyGet_withPost_returns405() throws Exception {
         Request req = new Request.Builder().url(edge() + "/only-get")
                 .post(RequestBody.create("", JSON_TYPE)).build();
         try (Response resp = CLIENT.newCall(req).execute()) {
-            assertEquals(405, resp.code(), "仅 GET 的端点收到 POST 应返回 405");
+            assertEquals(405, resp.code(), "浠?GET 鐨勭鐐规敹鍒?POST 搴旇繑鍥?405");
         }
     }
 
@@ -120,7 +121,7 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
     void onlyGet_withDelete_returns405() throws Exception {
         Request req = new Request.Builder().url(edge() + "/only-get").delete().build();
         try (Response resp = CLIENT.newCall(req).execute()) {
-            assertEquals(405, resp.code(), "仅 GET 的端点收到 DELETE 应返回 405");
+            assertEquals(405, resp.code(), "浠?GET 鐨勭鐐规敹鍒?DELETE 搴旇繑鍥?405");
         }
     }
 
@@ -128,11 +129,11 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
     void nonexistentPath_returns404() throws Exception {
         Request req = new Request.Builder().url(edge() + "/does-not-exist").get().build();
         try (Response resp = CLIENT.newCall(req).execute()) {
-            assertEquals(404, resp.code(), "不存在的路径应返回 404");
+            assertEquals(404, resp.code(), "涓嶅瓨鍦ㄧ殑璺緞搴旇繑鍥?404");
         }
     }
 
-    // ==================== 状态码 ====================
+    // ==================== 鐘舵€佺爜 ====================
 
     @Test
     void noContent_returns204() throws Exception {
@@ -141,7 +142,7 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
         try (Response resp = CLIENT.newCall(req).execute()) {
             assertEquals(204, resp.code());
             String body = resp.body() != null ? resp.body().string() : null;
-            assertTrue(body == null || body.isEmpty(), "204 不应有 body");
+            assertTrue(body == null || body.isEmpty(), "204 涓嶅簲鏈?body");
         }
     }
 
@@ -150,28 +151,28 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
         for (int code : new int[]{201, 202, 400, 404, 500}) {
             Request req = new Request.Builder().url(edge() + "/status/" + code).get().build();
             try (Response resp = CLIENT.newCall(req).execute()) {
-                assertEquals(code, resp.code(), "状态码 " + code + " 应透传");
+                assertEquals(code, resp.code(), "鐘舵€佺爜 " + code + " 搴旈€忎紶");
             }
         }
     }
 
-    // ==================== 中文/UTF-8 ====================
+    // ==================== 涓枃/UTF-8 ====================
 
     @Test
     void chineseResponse_returnsUtf8() throws Exception {
-        Request req = new Request.Builder().url(edge() + "/chinese?name=小明").get().build();
+        Request req = new Request.Builder().url(edge() + "/chinese?name=灏忔槑").get().build();
         try (Response resp = CLIENT.newCall(req).execute()) {
             assertEquals(200, resp.code());
             String raw = resp.body().string();
             Map<String, Object> body = JSON.parseObject(raw, Map.class);
-            assertEquals("你好，世界", body.get("greeting"));
-            assertEquals("小明", body.get("name"));
+            assertEquals("浣犲ソ锛屼笘鐣?, body.get("greeting"));
+            assertEquals("灏忔槑", body.get("name"));
         }
     }
 
     @Test
     void chineseRequestBody_roundTrips() throws Exception {
-        String payload = "{\"message\":\"中文内容测试\"}";
+        String payload = "{\"message\":\"涓枃鍐呭娴嬭瘯\"}";
         Request req = new Request.Builder().url(edge() + "/chinese-body")
                 .post(RequestBody.create(payload.getBytes(StandardCharsets.UTF_8), JSON_TYPE))
                 .build();
@@ -180,11 +181,11 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
             Map<String, Object> body = JSON.parseObject(resp.body().string(), Map.class);
             @SuppressWarnings("unchecked")
             Map<String, Object> received = (Map<String, Object>) body.get("received");
-            assertEquals("中文内容测试", received.get("message"));
+            assertEquals("涓枃鍐呭娴嬭瘯", received.get("message"));
         }
     }
 
-    // ==================== @RequestParam 多值 ====================
+    // ==================== @RequestParam 澶氬€?====================
 
     @Test
     void multiParam_arrayAndList() throws Exception {
@@ -196,7 +197,7 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
             Map<String, Object> body = JSON.parseObject(resp.body().string(), Map.class);
             assertEquals(3, body.get("ids"));
             assertEquals("1", body.get("first"));
-            assertEquals(List.of("a", "b"), body.get("tags"));
+            assertEquals(Arrays.asList("a", "b"), body.get("tags"));
         }
     }
 
@@ -213,7 +214,7 @@ public class EdgeCaseE2ETest extends BaseE2ETest {
         }
     }
 
-    // ==================== 路径变量 ====================
+    // ==================== 璺緞鍙橀噺 ====================
 
     @Test
     void pathVariable_injected() throws Exception {
