@@ -1,4 +1,4 @@
-package io.springperf.web.websocket.config;
+﻿package io.springperf.web.websocket.config;
 
 import io.springperf.web.server.PipelineCustomizer;
 import io.springperf.web.websocket.WebSocketConfigurer;
@@ -7,6 +7,7 @@ import io.springperf.web.websocket.server.WebSocketRoutingHandler;
 import org.junit.jupiter.api.Test;
 import org.springframework.web.socket.handler.TextWebSocketHandler;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,9 +34,9 @@ class WebSocketAutoConfigurationTest {
         WebSocketAutoConfiguration config = new WebSocketAutoConfiguration();
         WebSocketHandlerRegistry registry = new WebSocketHandlerRegistry();
         PipelineCustomizer customizer = new PipelineCustomizer();
-        WebSocketRoutingHandler handler = config.webSocketRoutingHandler(registry, customizer, List.of());
+        WebSocketRoutingHandler handler = config.webSocketRoutingHandler(registry, customizer, Arrays.asList());
         assertNotNull(handler);
-        // 无端点时不注入 customizer
+        // 鏃犵鐐规椂涓嶆敞鍏?customizer
     }
 
     @Test
@@ -51,11 +52,11 @@ class WebSocketAutoConfigurationTest {
             return null;
         }).when(configurer).registerWebSocketHandlers(any(WebSocketHandlerRegistry.class));
 
-        WebSocketRoutingHandler handler = config.webSocketRoutingHandler(registry, customizer, List.of(configurer));
+        WebSocketRoutingHandler handler = config.webSocketRoutingHandler(registry, customizer, Arrays.asList(configurer));
         assertNotNull(handler);
         assertFalse(registry.isEmpty());
         verify(configurer).registerWebSocketHandlers(registry);
         assertFalse(customizer.getAfterAggregatorHandlers().isEmpty(),
-                "有端点时应注入 WebSocketRoutingHandler 到 afterAggregator");
+                "鏈夌鐐规椂搴旀敞鍏?WebSocketRoutingHandler 鍒?afterAggregator");
     }
 }
